<resources>
    <string name="app_name">Programming Language</string>
    <string name="hint_searching">Searching language . .</string>
    <string name="titlebar_home">Program Language</string>
    <string name="todo">TODO</string>
    <string name="nameLg">Wahyu Septiadi</string>
    <string name="deskripLg">Lorem epsum pyodeauero</string>
    <string name="titlebar_profile">Profile</string>
    <string name="username">Wahyu Septiadi</string>
    <string name="email">wahyusptd@gmail.com</string>
    <string name="titlebar_detail">Detail Language</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama_bahasa">Nama bahasa</string>
    <string name="not_found">keyword not found</string>
</resources>
