<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AE0FF"
    tools:context=".Activity.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        app:titleTextColor="#fff" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlebar_detail"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textColor="#fff"/>

    <ImageView
        android:id="@+id/imgLanguage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/topBar"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/nameLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_bahasa"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_below="@+id/imgLanguage"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/deskripLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/deskripsi"
        android:textSize="16sp"
        android:textColor="#2E2E2E"
        android:layout_below="@+id/nameLanguage"/>
</RelativeLayout>