<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imageLg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/nameLg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameLg"
            android:layout_toEndOf="@+id/imageLg"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/deskripLg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/deskripLg"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/imageLg"
            android:layout_below="@+id/nameLg"
            android:textSize="15sp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>