<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AE0FF"
    tools:context=".Activity.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        app:titleTextColor="#fff" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlebar_profile"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textColor="#fff"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/img_profile"
        android:layout_below="@id/topBar"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/showLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto"
        android:visibility="visible"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="#000"
            android:enabled="false"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:autofillHints=""
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="#2E2E2E"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <ImageView
        android:id="@+id/editVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:layout_toEndOf="@id/foto"
        android:layout_marginTop="15dp"
        android:layout_marginStart="51dp"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:layout_toEndOf="@id/foto"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:layout_marginStart="51dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/todo" />

</RelativeLayout>